--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "DB": {
-    "gearhost": "server=den1.mysql3.gear.host;port=3306;database=keepr2;user id=keepr2;password=Oz448Ga~7_iJ"
+    "gearhost": "server=den1.mysql1.gear.host;port=3306;database=wishlist1;user id=wishlist1;password=Ma4ca!-5EW04"
   }
 }
