--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "DB": {
-    "gearhost": ""
+    "gearhost": "server=den1.mysql1.gear.host;port=3306;database=wishlist1;user id=wishlist1;password=Ma4ca!-5EW04"
   }
 }
